--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,10 +1,29 @@
 // Variables
 
 $deepBlue: #032f3e;
+$offWhite: #f8f9fb;
 $sectionHeading: 24px;
 
 #main-nav {
   background: $deepBlue;
+  ul {
+    width: 100%;
+  }
+  li {
+    float: left;
+    width: 14%;
+  }
+  a {
+    display: block;
+    color: $offWhite;
+    text-decoration: none;
+    padding: 14px;
+  }
+} // end of main-nav...
+ul:after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
 section h1 {
