--- a/scss/mixins.scss
+++ b/scss/mixins.scss
@@ -23,3 +23,21 @@
     margin-bottom: 30px;
   }
 }
+
+@mixin clearFix {
+  &:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+}
+
+@mixin grid($cols, $mgn) {
+  float: left;
+  width: (100% - ($mgn * ($cols - 1))) / $cols;
+  margin-right: $mgn;
+  margin-bottom: $mgn;
+  &:nth-child(#{$cols}n) {
+    margin-right: 0px;
+  }
+}
