--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,23 +6,23 @@
   background: $deepBlue;
   ul {
     width: 100%;
+    @include clearFix;
   }
   li {
     float: left;
-    width: 14%;
+    width: (100% / 6);
   }
   a {
     display: block;
     color: $offWhite;
+    text-align: center;
     text-decoration: none;
     padding: 14px;
+    &:hover {
+      background: #333;
+    }
   }
 } // end of main-nav...
-ul:after {
-  content: '';
-  display: block;
-  clear: both;
-}
 
 section h1 {
   font-size: $sectionHeading;
@@ -44,3 +44,37 @@ section h1 {
     max-width: 500px;
   }
 }
+
+#services {
+  margin-bottom: 60px;
+  li {
+    float: left;
+    box-sizing: border-box;
+    text-align: center;
+    width: (100% / 3);
+  }
+  img {
+    width: 60%;
+    margin: 20px 20%;
+  }
+  a {
+    text-decoration: none;
+    color: $deepBlue;
+    font-weight: bold;
+    &:hover {
+      color: red;
+    }
+  }
+  ul {
+    @include clearFix;
+  }
+} // end services
+
+#projects {
+  li {
+    @include grid(5, 2%);
+    img {
+      width: 100%;
+    }
+  }
+} // end projects
