--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@ li {
   #main-nav li {
     float: left;
     width: 16.66667%; }
+    @media screen and (max-width: 600px) {
+      #main-nav li {
+        width: 100%; } }
   #main-nav a {
     display: block;
     color: #f8f9fb;
@@ -41,7 +44,7 @@ li {
     text-decoration: none;
     padding: 14px; }
     #main-nav a:hover {
-      background: #333; }
+      background: #044156; }
 
 section h1 {
   font-size: 24px;
@@ -109,7 +112,7 @@ section h1 {
     color: #032f3e;
     font-weight: bold; }
     #services a:hover {
-      color: red; }
+      color: #3e1203; }
   #services ul:after {
     content: '';
     display: block;
