--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -19,6 +19,8 @@
     display: block;
     color: $offWhite;
     text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 3px;
     text-decoration: none;
     padding: 14px;
     &:hover {
